<resources>
    <string name="app_name">Wise Keep</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="add">Add</string>
    <string name="date">Date</string>
    <string name="nothing">不积小流 无以成江河</string>
    <string name="title_activity_income">收入</string>
    <string name="title_activity_outcome">支出</string>
    <string name="title_activity_settings">设置</string>
    <string name="title_activity_summary">统计</string>
    <string name="title_activity_new_income">新增收入</string>
    <string name="title_activity_new_outcome">新增支出</string>
    <string name="title_activity_income_detail">收入详情</string>
    <string name="title_activity_outcome_detail">支出详情</string>
    <string name="author">Author 梁坤昌泰 严克强 李孝天</string>
    <string name="type0_out">餐饮</string>
    <string name="type1_out">交通</string>
    <string name="type2_out">购物</string>
    <string name="type3_out">娱乐</string>
    <string name="type4_out">投资</string>
    <string name="type5_out">其它</string>
    <string name="type0_in">薪水</string>
    <string name="type1_in">奖金</string>
    <string name="type2_in">补助</string>
    <string name="type3_in">投资</string>
    <string name="type4_in">其它</string>
    <string name="positive_btn">确定</string>
    <string name="negative_btn">取消</string>
    <string name="dltDecision">确定删除吗？</string>
    <string name="edtDecision">确定修改吗？</string>
    <string name="yuan">￥</string>
    <string name="yuan_amt">￥ %.2f</string>
    <string name="hint_amount">金额</string>
    <string name="hint_type">方式</string>
    <string name="hint_desc">描述</string>
    <string name="stDate">起始日期</string>
</resources>
